				BOGOFILTER NEWS
			       =================

	!!!!!!!! READ THE RELEASE.NOTES !!!!!!!!

	The sections

        INCOMPATIBLE CHANGES IN BOGOFILTER (version)
and     MAJOR CHANGES IN BOGOFILTER (version)

	are particularly important.

	!!!!!!!! READ THE RELEASE.NOTES !!!!!!!!

-------------------------------------------------------------------------------

	2005-04-10

	* Repair bf_copy script that lost log.* files, possibly corrupting
	  database if they had been transactional.  The defect was introduced
	  into bogofilter 0.94.2.

	2005-04-09

	* Suppress valgrind reports of errors in glibc::strchr.

0.94.4	2005-04-07

	* The RELEASE.NOTES file has been reformatted for readability.

	* When using transactions, the db_log_autoremove option is now
	  enabled by default (to match the documentation).

	* Option db_log_autoremove has been added to bogofilter.cf.example

	2005-04-05

	* Fix segfault in VERP processing.

	2005-04-04

	* The code for handling file and directory names has been
          rewritten for clarity and maintainability.  Some options for
          bogoutil which used to take a directory argument now take a filename,
          for example -H, -r, and -R which all operate on a database,
          not on a database environment.

	2005-04-03

	* File handling code rewritten to use bfpath structure for
          holding all info and with a 3 step use of the info.  1 -
          create bfpaths during command line and config file
          processing; 2 - validate directories and file names; and 3 -
          use files for processing.

0.94.3	2005-03-29

	2005-03-27

	* Added FAQ info on using bogofilter with mutt and sylpheed claws.

	* Fixed --db-print-pagesize so that the proper directory is
	  used for database environment.

	2005-03-25

	* Add error checking to bogoutil's ROBX calculation.

	* Allow --db-verify to work for non-transactional databases.

	* Repair several minor defects around --db-print-pagesize.  Support