@@ -33,7 +33,7 @@ dsm_t dsm_dummies = {
     NULL,	/* dsm_get_env_dbe      */
     NULL,	/* dsm_database_name    */
     NULL,	/* dsm_recover_open     */
-    NULL,	/* dsm_auto_commit_flags*/                    
+    NULL,	/* dsm_auto_commit_flags*/
     NULL,	/* dsm_get_rmw_flag     */
     NULL,	/* dsm_lock             */
     NULL,	/* dsm_common_close     */
@@ -44,7 +44,8 @@ dsm_t dsm_dummies = {
     NULL,	/* dsm_purgelogs        */
     NULL,	/* dsm_recover          */
     NULL,	/* dsm_remove           */
-    NULL	/* dsm_verify           */
+    NULL,	/* dsm_verify           */
+    NULL,	/* dsm_list_logfiles    */
 };
 
 dsm_t *dsm = &dsm_dummies;
